<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.MainActivity">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimaryDark"
        android:padding="1dp">

        <TableRow style="@style/tr_style">

            <TextView
                style="@style/tv_style"
                android:text="@string/room_name" />

            <EditText
                android:id="@+id/room_et"
                style="@style/et_style"
                android:hint="@string/room_hint" />
        </TableRow>

        <TableRow
            style="@style/tr_style"
            android:paddingBottom="5dp">

            <TextView
                style="@style/tv_style"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/name_et"
                style="@style/et_style"
                android:hint="@string/user_hint" />
        </TableRow>

        <TableRow
            style="@style/tr_style"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/register_btn"
                style="@style/tv_style"
                android:layout_span="2"
                android:background="@drawable/btn_sel"
                android:text="@string/enter_room" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/conn_btn"
        style="@style/tv_style"
        android:text="@string/refresh"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />


</RelativeLayout>
